# Pentafun

./: CMakeLists.txt  CmakeLists.txt  README.md  fun.cpp
res/shaders/: vertex.glsl
